Getting up to date on master branch

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "yarn workspace @scaffold-eth/react-app start",
     "compile": "yarn workspace @scaffold-eth/hardhat compile",
     "deploy": "yarn workspace @scaffold-eth/hardhat deploy",
+    "verify": "yarn workspace @scaffold-eth/hardhat verify",
     "watch": "yarn workspace @scaffold-eth/hardhat watch",
     "accounts": "yarn workspace @scaffold-eth/hardhat accounts",
     "balance": "yarn workspace @scaffold-eth/hardhat balance",
@@ -50,7 +51,8 @@
     "graph-ship-local": "yarn graph-prepare && yarn graph-codegen && yarn graph-deploy-local",
     "deploy-and-graph": "yarn deploy && yarn graph-ship-local",
     "theme": "yarn workspace @scaffold-eth/react-app theme",
-    "watch-theme": "yarn workspace @scaffold-eth/react-app watch"
+    "watch-theme": "yarn workspace @scaffold-eth/react-app watch",
+    "postinstall": "husky install"
   },
   "workspaces": {
     "packages": [
@@ -65,7 +67,8 @@
       "**/hardhat-ts/**"
     ]
   },
-  "dependencies": {
-    "babel-jest": "^26.6.0"
+  "dependencies": {},
+  "devDependencies": {
+    "husky": "^7.0.2"
   }
 }
