--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -32,7 +32,7 @@
     "apollo-utilities": "^1.3.4",
     "arb-ts": "^0.0.18",
     "authereum": "^0.1.14",
-    "axios": "^0.21.4",
+    "axios": "^0.25.0",
     "bnc-notify": "^1.5.0",
     "dotenv": "^8.2.0",
     "eth-hooks": "2.3.16",
@@ -51,6 +51,7 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "searchico": "^1.2.1",
     "walletlink": "^2.1.5",
     "web3modal": "^1.9.1"
   },
